@@ -21,8 +21,8 @@ class CommandLine : public CmdLineParserBase
       unsigned page_arg () const {return _page_arg;}
       bool map_file_given () const {return _map_file_given;}
       const std::string& map_file_arg () const {return _map_file_arg;}
-      bool bbox_format_given () const {return _bbox_format_given;}
-      const std::string& bbox_format_arg () const {return _bbox_format_arg;}
+      bool bbox_given () const {return _bbox_given;}
+      const std::string& bbox_arg () const {return _bbox_arg;}
       bool output_given () const {return _output_given;}
       const std::string& output_arg () const {return _output_arg;}
       bool stdout_given () const {return _stdout_given;}
@@ -59,7 +59,7 @@ class CommandLine : public CmdLineParserBase
       const CmdLineParserBase::Option* options () const {return _options;}
       void handle_page (InputReader &ir, const Option &opt, bool longopt);
       void handle_map_file (InputReader &ir, const Option &opt, bool longopt);
-      void handle_bbox_format (InputReader &ir, const Option &opt, bool longopt);
+      void handle_bbox (InputReader &ir, const Option &opt, bool longopt);
       void handle_output (InputReader &ir, const Option &opt, bool longopt);
       void handle_stdout (InputReader &ir, const Option &opt, bool longopt);
       void handle_no_fonts (InputReader &ir, const Option &opt, bool longopt);
@@ -86,8 +86,8 @@ class CommandLine : public CmdLineParserBase
       unsigned _page_arg;
       bool _map_file_given;
       std::string _map_file_arg;
-      bool _bbox_format_given;
-      std::string _bbox_format_arg;
+      bool _bbox_given;
+      std::string _bbox_arg;
       bool _output_given;
       std::string _output_arg;
       bool _stdout_given;
